<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="unit">Cm</string>
    <string name="femaletext">Female</string>
    <string name="age">Age</string>
    <string name="startingheight">170</string>
    <string name="startingweight">55</string>
    <string name="startingage">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="weight">Weight</string>
    <string name="male">Male</string>
    <string name="Todo">TODO</string>
    <string name="bmi_calculator">BMI CALCULATOR</string>
    <string name="Smth">TODO</string>
    <string name="_22">22</string>
    <string name="gender">Gender</string>
    <string name="your_bmi_category_is">Your BMI Category Is</string>
    <string name="recalculate_your_bmi">RECALCULATE YOUR BMI</string>

</resources>