<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".bmiactivity">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contentlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/Smth"
        android:padding="15dp"
        android:src="@drawable/ok">

    </ImageView>


    <RelativeLayout
        android:id="@+id/contentlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/cardbackground"
        android:padding="20dp">

        <TextView
            android:id="@+id/bmidisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/trans"
            android:text="@string/_22"
            android:textColor="@color/white"
            android:textSize="55sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/genderdisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bmidisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bmicategorydispaly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/genderdisplay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/your_bmi_category_is"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <android.widget.Button
        android:id="@+id/gotomain"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/contentlayout"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="140dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/raleway"
        android:text="@string/recalculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold">

    </android.widget.Button>


</RelativeLayout>