<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/centerhorizontalline"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackground">

        <TextView
            android:id="@+id/textmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/raleway"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@id/textmale"
            android:layout_centerVertical="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="13dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/female"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="60dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackground">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@id/textfemale"
            android:layout_centerInParent="true"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="13dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/female">

        </ImageView>

        <TextView
            android:id="@+id/textfemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="7dp"
            android:fontFamily="@font/raleway"
            android:text="@string/femaletext"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/heightlayout"
        android:layout_width="340dp"
        android:layout_height="165dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/cardbackground">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/startingheight"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentheight"
            android:fontFamily="@font/raleway"
            android:text="@string/unit"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />


        <SeekBar
            android:id="@+id/seekbarforheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="19dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/calculatebmi"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/raleway"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold">

    </android.widget.Button>


    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackground">


        <TextView
            android:id="@+id/textweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingweight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decrementweight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/incremetweight"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:contentDescription="@string/todo"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/Age"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackground">


        <TextView

            android:id="@+id/textage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/age"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:text="@string/startingage"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decrementage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"

                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/incrementage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/add">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>